# 2023-autumn-ab-python-hw-13-OlgaShish

./: .gitignore  Dockerfile  Makefile  config.json  docker-compose.yml  hw_15.db  notes.md  pyproject.toml
.github/workflows/: ci.yml
client/: app.js  index.html
hw_15/: app.py  db.py  main.py  models.py  token.py
tests/: test_app.py
