[tool.poetry]
name = "hw-15"
version = "0.1.0"
description = ""
authors = ["Olga Shishlina stetsyuk_olenka@mail.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
flake8-bandit = "^4.1.1"
pyjwt = "^2.8.0"
pytest = "^7.4.3"
black = "^23.9.1"
pylint = "^3.0.1"
mypy = "^1.6.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
